# arbitrum-airdrop

./: .env.example  Cargo.toml  README.md
src/: address.rs  block_scanner.rs  claim.rs  helpers.rs  lib.rs  main.rs
src/json/: addresses.json
